--- a/.github/workflows/update_twitch.yml
+++ b/.github/workflows/update_twitch.yml
@@ -1,7 +1,7 @@
 name: Update Twitch Trending
 on:
   schedule:
-    - cron: "0 7 * * *"   # (예시) 매일 16시 KST(=7시 UTC)
+    - cron: "0 * * * *"   # (예시) 매일 16시 KST(=7시 UTC)
   workflow_dispatch:
 jobs:
   update-twitch:
